assets/sass/helpers.scss
@charset 'UTF-8';

.d-flex {
  display: flex;

  @media (max-width: $screen-sm) {
    display: block;
  }
}

.align-items-center {
  align-items: center;
}

.w-100 { width: 100%; }

.mt-0 { margin-top: 0; }
.mb-0 { margin-bottom: 0; }
.mr-0 { margin-right: 0; }
.ml-0 { margin-left: 0; }
.pt-0 { padding-top: 0; }
.pb-0 { padding-bottom: 0; }
.pr-0 { padding-right: 0; }
.pl-0 { padding-left: 0; }

